--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -193,42 +193,27 @@
     texture.deferred.colortex3=lib/textures/cloud-water.png
     texture.gbuffers.gaux4=lib/textures/cloud-water.png
 
-#Block ID map
-    texture.setup.colortex3=lib/textures/blockIdMap.png
 
-    iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
+iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
 # Custom Images
     #if VX_VOL_SIZE == 0
-        image.voxelVolumeI = none RED_INTEGER R32I INT false false 96 256 96
-        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 96 128 96
+        image.distanceFieldI = distanceField RED RGBA16F FLOAT false false 96 128 96
+        image.occupancyVolume = none RED_INTEGER R32I INT true false 96 64 96
+        image.voxelCols = none RED_INTEGER R32I INT true false 96 128 96
     #elif VX_VOL_SIZE == 1
-        image.voxelVolumeI = none RED_INTEGER R32I INT false false 128 384 128
-        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 128 192 128
+        image.distanceFieldI = distanceField RED RGBA16F FLOAT false false 128 192 128
+        image.occupancyVolume = none RED_INTEGER R32I INT true false 128 96 128
+        image.voxelCols = none RED_INTEGER R32I INT true false 128 192 128
     #elif VX_VOL_SIZE == 2
-        image.voxelVolumeI = none RED_INTEGER R32I INT false false 256 512 256
-        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 256 256 256
+        image.distanceFieldI = distanceField RED RGBA16F FLOAT false false 256 256 256
+        image.occupancyVolume = none RED_INTEGER R32I INT true false 256 128 256
+        image.voxelCols = none RED_INTEGER R32I INT true false 256 256 256
     #elif VX_VOL_SIZE == 3
-        image.voxelVolumeI = none RED_INTEGER R32I INT false false 512 512 512
-        image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 512 256 512
+        image.distanceFieldI = distanceField RED RGBA16F FLOAT false false 512 256 512
+        image.occupancyVolume = none RED_INTEGER R32I INT true false 512 128 512
+        image.voxelCols = none RED_INTEGER R32I INT true false 512 256 512
     #endif
 # SSBOs
-    # Material map and location assignment to block IDs
-    bufferObject.0=524292
-    # per-blockID geometry storage
-    #if VOXEL_DETAIL_AMOUNT == 1
-        bufferObject.1=21854
-    #elif VOXEL_DETAIL_AMOUNT == 2
-        bufferObject.1=830123
-    #elif VOXEL_DETAIL_AMOUNT == 3
-        bufferObject.1=5723478
-    #elif VOXEL_DETAIL_AMOUNT == 4
-        bufferObject.1=35083606
-    #elif VOXEL_DETAIL_AMOUNT == 5
-        bufferObject.1=269964629
-    #elif VOXEL_DETAIL_AMOUNT == 6
-        # this is slightly less than necessary, but it is fine if the material index doesn't go all the way to 16384
-        bufferObject.1=2000000000
-    #endif
     # denoising data (only second moment for now)
     bufferObject.2=8 true 1.0 1.0
 
