--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -214,8 +214,7 @@ iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
         image.voxelCols = none RED_INTEGER R32I INT true false 512 256 512
     #endif
 # SSBOs
-    # denoising data (only second moment for now)
-    bufferObject.2=8 true 1.0 1.0
+bufferObject.0 = 192
 
 #Custom Uniforms
     uniform.float.framemod8 = frameCounter % 8
