add option to reuse voxel-space light lists for screenspace light calculation

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -57,7 +57,7 @@
         screen.SELECT_OUTLINE_SETTINGS=<empty> <empty> SELECT_OUTLINE <empty> SELECT_OUTLINE_I SELECT_OUTLINE_R SELECT_OUTLINE_G SELECT_OUTLINE_B
         screen.WORLD_OUTLINE_SETTINGS=<empty> <empty> WORLD_OUTLINE WORLD_OUTLINE_THICKNESS WORLD_OUTLINE_I <empty> <empty> <empty> DARK_OUTLINE DARK_OUTLINE_THICKNESS
         screen.MOON_PHASE_INF_SETTINGS=<empty> <empty> MOON_PHASE_INF_LIGHT MOON_PHASE_INF_ATMOSPHERE MOON_PHASE_INF_REFLECTION <empty> <empty> <empty> MOON_PHASE_FULL MOON_PHASE_PARTIAL MOON_PHASE_DARK
-    screen.VX_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT LIGHT_TRACE_LENGTH MAX_TRACE_COUNT [BLOCKLIGHT_SETTINGS] LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT GI_STRENGTH LIGHTSOURCE_SIZE_MULT <empty> <empty> <empty> [DENOISE_SETTINGS] [VX_WORLD] [VBL_SETTINGS]
+    screen.VX_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT LIGHT_TRACE_LENGTH MAX_TRACE_COUNT [BLOCKLIGHT_SETTINGS] LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT GI_STRENGTH LIGHTSOURCE_SIZE_MULT SCREENSPACE_LIGHT_DISCOVERY <empty> <empty> [DENOISE_SETTINGS] [VX_WORLD] [VBL_SETTINGS]
         screen.VBL_SETTINGS=<empty> <empty> VOLUMETRIC_BLOCKLIGHT VBL_STRENGTH VBL_NETHER_MULT VBL_END_MULT
         screen.DENOISE_SETTINGS=<empty> <empty> DENOISING_DEFINE ACCUMULATION <empty> <empty> DENOISE_MAX_BLUR ACCUM_FALLOFF_SPEED DENOISE_LENIENCE
         screen.BLOCKLIGHT_SETTINGS=<empty> <empty> [BLOCKCOLS] [ENTITYCOLS] GLOWING_ORES [ORECOLS] <empty> <empty> BLOCKLIGHT_COLOR_MODE [OTHER_COL]
