--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -209,8 +209,7 @@ iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
         image.voxelCols = none RED_INTEGER R32I INT true false 512 512 512
     #endif
 # SSBOs
-# light list (262144*48 bytes) + 3 mat4s (3*64 bytes) + light count (4 bytes)
-bufferObject.0 = 12583108
+bufferObject.0 = 192
 
 #Custom Uniforms
     uniform.float.framemod8 = frameCounter % 8
