--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -209,7 +209,7 @@ iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
         image.voxelCols = none RED_INTEGER R32I INT true false 512 512 512
     #endif
 # SSBOs
-bufferObject.0 = 192
+bufferObject.0 = 5000192
 
 #Custom Uniforms
     uniform.float.framemod8 = frameCounter % 8
