--- a/shaders/entity.properties
+++ b/shaders/entity.properties
@@ -6,7 +6,8 @@
 
 entity.50000=end_crystal
 entity.50004=lightning_bolt
-entity.50008=item_frame glow_item_frame
+entity.50008=item_frame
+entity.50010=glow_item_frame
 entity.50012=iron_golem
 entity.50016=player
 entity.50020=blaze
