add toggles for foliage, player and entity voxelisation

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -57,10 +57,10 @@
         screen.SELECT_OUTLINE_SETTINGS=<empty> <empty> SELECT_OUTLINE <empty> SELECT_OUTLINE_I SELECT_OUTLINE_R SELECT_OUTLINE_G SELECT_OUTLINE_B
         screen.WORLD_OUTLINE_SETTINGS=<empty> <empty> WORLD_OUTLINE WORLD_OUTLINE_THICKNESS WORLD_OUTLINE_I <empty> <empty> <empty> DARK_OUTLINE DARK_OUTLINE_THICKNESS
         screen.MOON_PHASE_INF_SETTINGS=<empty> <empty> MOON_PHASE_INF_LIGHT MOON_PHASE_INF_ATMOSPHERE MOON_PHASE_INF_REFLECTION <empty> <empty> <empty> MOON_PHASE_FULL MOON_PHASE_PARTIAL MOON_PHASE_DARK
-    screen.VX_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT LIGHT_TRACE_LENGTH MAX_TRACE_COUNT [BLOCKLIGHT_SETTINGS] LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT GI_STRENGTH GI_SAMPLE_COUNT LIGHTSOURCE_SIZE_MULT VOXEL_RT_REFLECTIONS <empty> <empty> <empty> [DENOISE_SETTINGS] [VX_WORLD] [VBL_SETTINGS]
+    screen.VX_SETTINGS=<empty> <empty> [VX_VOL_SETTINGS] LIGHT_TRACE_LENGTH MAX_TRACE_COUNT [BLOCKLIGHT_SETTINGS] LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT GI_STRENGTH GI_SAMPLE_COUNT LIGHTSOURCE_SIZE_MULT VOXEL_RT_REFLECTIONS <empty> <empty> <empty> [VX_WORLD] [VBL_SETTINGS]
     screen.VX_SETTINGS.columns=2
+        screen.VX_VOL_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT ENTITY_VOXELIZATION PLAYER_VOXELIZATION FOLIAGE_VOXELIZATION
         screen.VBL_SETTINGS=<empty> <empty> VOLUMETRIC_BLOCKLIGHT VBL_STRENGTH VBL_NETHER_MULT VBL_END_MULT
-        screen.DENOISE_SETTINGS=<empty> <empty> DENOISING_DEFINE ACCUMULATION <empty> <empty> DENOISE_MAX_BLUR ACCUM_FALLOFF_SPEED DENOISE_LENIENCE
         screen.BLOCKLIGHT_SETTINGS=<empty> <empty> [BLOCKCOLS] [ENTITYCOLS] GLOWING_ORES [ORECOLS] <empty> <empty> BLOCKLIGHT_COLOR_MODE [OTHER_COL]
             screen.BLOCKCOLS=<empty> <empty> <empty> [FIRECOLS] [FROGCOLS] [TORCHCOLS] <empty> <empty> <empty> [AMETHYST_COL] [BEACON_COL] [ICE_COL] [BREWINGSTAND_COL] [CANDLE_COL] [CHORUS_COL] [CONDUIT_COL] [CRYING_COL] [TABLE_COL] [END_COL] [ENDROD_COL] [FURNACE_COL] [BERRY_COL] [LICHEN_COL] [GLOWSTONE_COL] [PUMPKIN_COL] [LAVA_COL] [MAGMA_COL] [PORTAL_COL] [REDSTONELAMP_COL] [PICKLE_COL] [SCULK_COL] [SEALANTERN_COL] [SHROOMLIGHT_COL] [SPAWNER_COL] [TNT_COL]
                 screen.FIRECOLS=<empty> <empty> [FIRE_COL] [SOULFIRE_COL]
