light block voxelisation

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -272,7 +272,7 @@ block.10840=lime_concrete
 block.10844=lime_carpet lime_wool
 block.10848=crafter
 block.10852=copper_bulb exposed_copper_bulb weathered_copper_bulb oxidized_copper_bulb waxed_copper_bulb waxed_exposed_copper_bulb waxed_weathered_copper_bulb waxed_oxidized_copper_bulb
-
+block.10996=light
 block.20000=
 
 block.30000=stained_glass white_stained_glass orange_stained_glass magenta_stained_glass light_blue_stained_glass yellow_stained_glass lime_stained_glass pink_stained_glass gray_stained_glass light_gray_stained_glass cyan_stained_glass purple_stained_glass blue_stained_glass brown_stained_glass green_stained_glass red_stained_glass black_stained_glass
