--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -131,6 +131,7 @@
     vignette=false
     beacon.beam.depth=true
     rain.depth=false
+    voxelizeLightBlocks=true
     shadow.culling=reversed
     #ifndef ENTITY_SHADOWS
         shadowEntities = false
