more foliage voxelization exclusion

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -272,6 +272,8 @@ block.10840=lime_concrete
 block.10844=lime_carpet lime_wool
 block.10848=crafter
 block.10852=copper_bulb exposed_copper_bulb weathered_copper_bulb oxidized_copper_bulb waxed_copper_bulb waxed_exposed_copper_bulb waxed_weathered_copper_bulb waxed_oxidized_copper_bulb
+block.10988=cocoa:age=0
+block.10992=nether_wart
 block.10996=light
 block.20000=
 
