--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -10,7 +10,7 @@
 
     screen.INFORMATION=<empty> <empty> info0 <empty> <empty> <empty> info1 info2 info3 info4 info5 info8 info9 info10
 
-    screen.PERFORMANCE_SETTINGS=<profile> <empty> <empty> <empty> SHADOW_QUALITY shadowDistance LIGHTSHAFT_QUALI_DEFINE ENTITY_SHADOWS_DEFINE DETAIL_QUALITY CLOUD_QUALITY WATER_REFLECT_QUALITY BLOCK_REFLECT_QUALITY FXAA_DEFINE SSAO_QUALI_DEFINE COLORED_LIGHTING ANISOTROPIC_FILTER
+    screen.PERFORMANCE_SETTINGS=<profile> <empty> <empty> <empty> SHADOW_QUALITY shadowDistance LIGHTSHAFT_QUALI_DEFINE ENTITY_SHADOWS_DEFINE DETAIL_QUALITY CLOUD_QUALITY WATER_REFLECT_QUALITY BLOCK_REFLECT_QUALITY FXAA_DEFINE SSAO_QUALI_DEFINE ANISOTROPIC_FILTER
 
     screen.MATERIAL_SETTINGS=<empty> <empty> [IPBR_SETTINGS] [CUSTOM_PBR_SETTINGS] <empty> <empty> [WATER_SETTINGS] RAIN_PUDDLES [WAVING_SETTINGS]
         screen.IPBR_SETTINGS=<empty> <empty> GENERATED_NORMALS COATED_TEXTURES GENERATED_NORMAL_MULT COATED_TEXTURE_MULT ENTITY_GN_AND_CT <empty> <empty> <empty> [GLOWING_ORE_SETTINGS] [GLOWING_STUFF_SETTINGS] [OTHER_IPBR_SETTINGS]
@@ -181,11 +181,6 @@
         program.world-1/composite7.enabled=FXAA
         program.world1/composite7.enabled=FXAA
     #endif
-    #if COLORED_LIGHTING == 0
-    program.world0/shadowcomp.enabled=false
-    program.world-1/shadowcomp.enabled=false
-    program.world1/shadowcomp.enabled=false
-    #endif
 
 #Miscellaneous
     #if ENTITY_SHADOWS_DEFINE == -1
@@ -203,37 +198,8 @@
         blend.gbuffers_water=SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
         dhShadow.enabled = false
     #endif
-    #if COLORED_LIGHTING > 0
-        iris.features.optional = CUSTOM_IMAGES
-    #endif
-    #if COLORED_LIGHTING > 0
-        shadow.culling = reversed
-        voxelizeLightBlocks = true
-        #if COLORED_LIGHTING == 128
-            image.voxel_img = voxel_sampler red_integer r8ui unsigned_int true false 128 64 128
-            image.floodfill_img = floodfill_sampler rgba rgba16f half_float false false 128 64 128
-            image.floodfill_img_copy = floodfill_sampler_copy rgba rgba16f half_float false false 128 64 128
-        #elif COLORED_LIGHTING == 192
-            image.voxel_img = voxel_sampler red_integer r8ui unsigned_int true false 192 96 192
-            image.floodfill_img = floodfill_sampler rgba rgba16f half_float false false 192 96 192
-            image.floodfill_img_copy = floodfill_sampler_copy rgba rgba16f half_float false false 192 96 192
-        #elif COLORED_LIGHTING == 256
-            image.voxel_img = voxel_sampler red_integer r8ui unsigned_int true false 256 128 256
-            image.floodfill_img = floodfill_sampler rgba rgba16f half_float false false 256 128 256
-            image.floodfill_img_copy = floodfill_sampler_copy rgba rgba16f half_float false false 256 128 256
-        #elif COLORED_LIGHTING == 384
-            image.voxel_img = voxel_sampler red_integer r8ui unsigned_int true false 384 192 384
-            image.floodfill_img = floodfill_sampler rgba rgba16f half_float false false 384 192 384
-            image.floodfill_img_copy = floodfill_sampler_copy rgba rgba16f half_float false false 384 192 384
-        #elif COLORED_LIGHTING == 512
-            image.voxel_img = voxel_sampler red_integer r8ui unsigned_int true false 512 256 512
-            image.floodfill_img = floodfill_sampler rgba rgba16f half_float false false 512 256 512
-            image.floodfill_img_copy = floodfill_sampler_copy rgba rgba16f half_float false false 512 256 512
-        #endif
-
-        #if RAIN_PUDDLES > 0
-            image.puddle_img = puddle_sampler red_integer r8ui unsigned_int true false 128 128
-        #endif
+    #if RAIN_PUDDLES > 0
+        image.puddle_img = puddle_sampler red_integer r8ui unsigned_int true false 128 128
     #endif
 #Custom Noise
     texture.noise=lib/textures/noise.png
