fix problems from block.properties changes

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -203,7 +203,7 @@ block.10396=lit_pumpkin jack_o_lantern
 block.10401=sea_pickle:waterlogged=false
 block.10404=sea_pickle:waterlogged=true
 block.10408=basalt polished_basalt smooth_basalt
-block.10412=glowstone light
+block.10412=glowstone
 block.10416=nether_brick nether_bricks cracked_nether_bricks chiseled_nether_bricks
 #if MC_VERSION >= 11300
 block.10417=nether_brick_wall nether_brick_fence nether_brick_slab nether_brick_stairs
@@ -361,6 +361,7 @@ block.10881=nether_wart red_mushroom brown_mushroom cocoa cake candle_cake:lit=f
 block.10884=weeping_vines_plant
 block.10885=weeping_vines twisting_vines_plant twisting_vines
 block.10888=hay_block
+block.10996=light
 
 block.20000=
 
