--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -194,9 +194,7 @@
         blend.gbuffers_water=SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE ONE_MINUS_SRC_ALPHA
         dhShadow.enabled = false
     #endif
-    #if RAIN_PUDDLES > 0
-        image.puddle_img = puddle_sampler red_integer r8ui unsigned_int true false 128 128
-    #endif
+
 #Custom Noise
     texture.noise=lib/textures/noise.png
     texture.deferred.colortex3=lib/textures/cloud-water.png
@@ -205,30 +203,37 @@
 
 iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
 # Custom Images
+    #if RAIN_PUDDLES > 0
+        image.puddle_img = puddle_sampler red_integer r8ui unsigned_int true false 128 128
+    #endif
     #if VX_VOL_SIZE == 0
         image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 96 128 96
         image.distanceFieldI = distanceField RGBA RGBA16F FLOAT false false 96 256 96
         image.lightStorage = none RGBA_INTEGER RGBA16I INT false false 96 64 96
         image.occupancyVolume = none RED_INTEGER R32I INT true false 96 128 96
         image.voxelCols = none RED_INTEGER R32I INT true false 96 256 96
+        image.voxel_img = voxel_sampler RED_INTEGER R8UI UNSIGNED_INT true false 96 64 96
     #elif VX_VOL_SIZE == 1
         image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 128 192 128
         image.distanceFieldI = distanceField RGBA RGBA16F FLOAT false false 128 384 128
         image.lightStorage = none RGBA_INTEGER RGBA16I INT false false 128 96 128
         image.occupancyVolume = none RED_INTEGER R32I INT true false 128 192 128
         image.voxelCols = none RED_INTEGER R32I INT true false 128 384 128
+        image.voxel_img = voxel_sampler RED_INTEGER R8UI UNSIGNED_INT true false 128 96 128
     #elif VX_VOL_SIZE == 2
         image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 256 256 256
         image.distanceFieldI = distanceField RGBA RGBA16F FLOAT false false 256 512 256
         image.lightStorage = none RGBA_INTEGER RGBA16I INT false false 256 128 256
         image.occupancyVolume = none RED_INTEGER R32I INT true false 256 256 256
         image.voxelCols = none RED_INTEGER R32I INT true false 256 512 256
+        image.voxel_img = voxel_sampler RED_INTEGER R8UI UNSIGNED_INT true false 256 128 256
     #elif VX_VOL_SIZE == 3
         image.irradianceCacheI = irradianceCache RGBA RGBA16F FLOAT false false 512 256 512
         image.distanceFieldI = distanceField RGBA RGBA16F FLOAT false false 512 512 512
         image.lightStorage = none RGBA_INTEGER RGBA16I INT false false 512 128 512
         image.occupancyVolume = none RED_INTEGER R32I INT true false 512 256 512
         image.voxelCols = none RED_INTEGER R32I INT true false 512 512 512
+        image.voxel_img = voxel_sampler RED_INTEGER R8UI UNSIGNED_INT true false 512 128 512
     #endif
 # SSBOs
 bufferObject.0 = 5000192
