add at_midBlock.w modded light support

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -202,6 +202,7 @@
 
 
 iris.features.required=CUSTOM_IMAGES SSBO COMPUTE_SHADERS
+iris.features.optional=BLOCK_EMISSION_ATTRIBUTE
 # Custom Images
     #if RAIN_PUDDLES > 0
         image.puddle_img = puddle_sampler red_integer r8ui unsigned_int true false 128 128
