internal tweaks to interactive water

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -175,6 +175,9 @@
     program.world0/shadowcomp2.enabled=INTERACTIVE_WATER
     program.world-1/shadowcomp2.enabled=INTERACTIVE_WATER
     program.world1/shadowcomp2.enabled=INTERACTIVE_WATER
+    program.world0/shadowcomp3.enabled=INTERACTIVE_WATER
+    program.world-1/shadowcomp3.enabled=INTERACTIVE_WATER
+    program.world1/shadowcomp3.enabled=INTERACTIVE_WATER
     #if FXAA_DEFINE == -1
         program.world0/composite7.enabled=FXAA
         program.world-1/composite7.enabled=FXAA
