fix passing material data to blocklight calculations, handle metalness

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -57,7 +57,7 @@
         screen.WORLD_OUTLINE_SETTINGS=<empty> <empty> WORLD_OUTLINE WORLD_OUTLINE_THICKNESS WORLD_OUTLINE_I <empty> <empty> <empty> DARK_OUTLINE DARK_OUTLINE_THICKNESS
         screen.MOON_PHASE_INF_SETTINGS=<empty> <empty> MOON_PHASE_INF_LIGHT MOON_PHASE_INF_ATMOSPHERE MOON_PHASE_INF_REFLECTION <empty> <empty> <empty> MOON_PHASE_FULL MOON_PHASE_PARTIAL MOON_PHASE_DARK
         screen.ACL_FEATURES_SETTINGS=<empty> <empty> CONNECTED_GLASS_EFFECT PORTAL_EDGE_EFFECT PUDDLE_VOXELIZATION <empty> <empty> <empty> COLORED_LIGHT_FOG COLORED_LIGHT_FOG_I
-    screen.VX_SETTINGS=<empty> <empty> [VX_VOL_SETTINGS] [RT_SETTINGS] [BLOCKLIGHT_SETTINGS] LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT BLOCKLIGHT_RESOLUTION GI_STRENGTH LIGHTSOURCE_SIZE_MULT VOXEL_RT_REFLECTIONS <empty> <empty> [VBL_SETTINGS] [VX_WORLD]
+    screen.VX_SETTINGS=<empty> <empty> [VX_VOL_SETTINGS] [RT_SETTINGS] [BLOCKLIGHT_SETTINGS] LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT BLOCKLIGHT_RESOLUTION GI_STRENGTH LIGHTSOURCE_SIZE_MULT VOXEL_RT_REFLECTIONS BLOCKLIGHT_HIGHLIGHT <empty> <empty> [VBL_SETTINGS] [VX_WORLD]
     screen.VX_SETTINGS.columns=2
         screen.VX_VOL_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT ENTITY_VOXELIZATION PLAYER_VOXELIZATION FOLIAGE_VOXELIZATION
         screen.RT_SETTINGS=<empty> <empty> MAX_TRACE_COUNT RT_STEPS LIGHT_TRACE_LENGTH TRANSLUCENT_LIGHT_TINT GI_SAMPLE_COUNT
