update settings to work with COLORED_LIGHT_FOG instead of VOLUMETRIC_BLOCKLIGHT

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -61,7 +61,7 @@
     screen.VX_SETTINGS.columns=2
         screen.VX_VOL_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT ENTITY_VOXELIZATION PLAYER_VOXELIZATION FOLIAGE_VOXELIZATION
         screen.RT_SETTINGS=<empty> <empty> MAX_TRACE_COUNT RT_STEPS LIGHT_TRACE_LENGTH TRANSLUCENT_LIGHT_TINT GI_SAMPLE_COUNT
-        screen.VBL_SETTINGS=<empty> <empty> VOLUMETRIC_BLOCKLIGHT VBL_STRENGTH VBL_NETHER_MULT VBL_END_MULT
+        screen.VBL_SETTINGS=<empty> <empty> COLORED_LIGHT_FOG COLORED_LIGHT_FOG_I VBL_NETHER_MULT VBL_END_MULT
         screen.BLOCKLIGHT_SETTINGS=<empty> <empty> [BLOCKCOLS] [ENTITYCOLS] GLOWING_ORES [ORECOLS] <empty> <empty> BLOCKLIGHT_COLOR_MODE [OTHER_COL] [BLOCKLIGHT_COLOR_SETTINGS]
             screen.BLOCKCOLS=<empty> <empty> <empty> [FIRECOLS] [FROGCOLS] [TORCHCOLS] <empty> <empty> <empty> [AMETHYST_COL] [BEACON_COL] [ICE_COL] [BREWINGSTAND_COL] [CANDLE_COL] [CHORUS_COL] [CONDUIT_COL] [CRYING_COL] [TABLE_COL] [END_COL] [ENDROD_COL] [FURNACE_COL] [BERRY_COL] [LICHEN_COL] [GLOWSTONE_COL] [PUMPKIN_COL] [LAVA_COL] [MAGMA_COL] [PORTAL_COL] [REDSTONELAMP_COL] [PICKLE_COL] [SCULK_COL] [SEALANTERN_COL] [SHROOMLIGHT_COL] [SPAWNER_COL] [TNT_COL] [DEBRIS_COL]
                 screen.FIRECOLS=<empty> <empty> [FIRE_COL] [SOULFIRE_COL]
