add lower-rate SDF building

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -59,7 +59,7 @@
         screen.ACL_FEATURES_SETTINGS=<empty> <empty> COLORED_LIGHT_SATURATION <empty> <empty> <empty>  COLORED_LIGHT_FOG COLORED_LIGHT_FOG_I CONNECTED_GLASS_EFFECT PORTAL_EDGE_EFFECT PUDDLE_VOXELIZATION COLORED_CANDLE_LIGHT
     screen.VX_SETTINGS=<empty> <empty> [VX_VOL_SETTINGS] [RT_SETTINGS] [BLOCKLIGHT_SETTINGS] LIGHT_COLOR_SATURATION PER_PIXEL_LIGHT BLOCKLIGHT_RESOLUTION GI_STRENGTH GI_AMBIENT_MIN LIGHTSOURCE_SIZE_MULT VOXEL_RT_REFLECTIONS BLOCKLIGHT_HIGHLIGHT <empty> <empty> <empty> [VBL_SETTINGS] [VX_WORLD]
     screen.VX_SETTINGS.columns=2
-        screen.VX_VOL_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT ENTITY_VOXELIZATION PLAYER_VOXELIZATION FOLIAGE_VOXELIZATION
+        screen.VX_VOL_SETTINGS=<empty> <empty> VX_VOL_SIZE VOXEL_DETAIL_AMOUNT ENTITY_VOXELIZATION PLAYER_VOXELIZATION FOLIAGE_VOXELIZATION <empty> SDF_UPDATE_INTERVAL
         screen.RT_SETTINGS=<empty> <empty> MAX_TRACE_COUNT RT_STEPS LIGHT_TRACE_LENGTH TRANSLUCENT_LIGHT_TINT GI_SAMPLE_COUNT
         screen.VBL_SETTINGS=<empty> <empty> COLORED_LIGHT_FOG COLORED_LIGHT_FOG_I VBL_NETHER_MULT VBL_END_MULT
         screen.BLOCKLIGHT_SETTINGS=<empty> <empty> [BLOCKCOLS] [ENTITYCOLS] GLOWING_ORES [ORECOLS] <empty> <empty> BLOCKLIGHT_COLOR_MODE [OTHER_COL] [BLOCKLIGHT_COLOR_SETTINGS]
