--- a/shaders/item.properties
+++ b/shaders/item.properties
@@ -6,13 +6,16 @@ item.40004=filled_map
 # itemID / 16  % 16: green
 # itemID / 256 % 16: blue
 
-item.15=redstone_block redstone_torch redstone_ore
+item.15=redstone_block redstone_torch redstone_ore \
+quad-mstv-mtv:acacia_redstone_torch quad-mstv-mtv:bamboo_redstone_torch quad-mstv-mtv:birch_redstone_torch quad-mstv-mtv:cherry_redstone_torch quad-mstv-mtv:crimson_redstone_torch quad-mstv-mtv:dark_oak_redstone_torch quad-mstv-mtv:pale_oak_redstone_torch quad-mstv-mtv:jungle_redstone_torch quad-mstv-mtv:mangrove_redstone_torch quad-mstv-mtv:spruce_redstone_torch quad-mstv-mtv:warped_redstone_torch
 item.79=magma_block magma_cream
-item.927=torch campfire lantern candle glowstone
+item.927=torch campfire lantern candle glowstone \
+quad-mstv-mtv:acacia_torch quad-mstv-mtv:bamboo_torch quad-mstv-mtv:birch_torch quad-mstv-mtv:cherry_torch quad-mstv-mtv:crimson_torch quad-mstv-mtv:dark_oak_torch quad-mstv-mtv:pale_oak_torch quad-mstv-mtv:jungle_torch quad-mstv-mtv:mangrove_torch quad-mstv-mtv:spruce_torch quad-mstv-mtv:warped_torch
 item.383=lava_bucket fire_charge shroomlight jack_o_lantern
 item.1267=emerald_block
 item.2295=sea_pickle
 item.3852=respawn_anchor crying_obsidian
 item.3902=amethyst_shard small_amethyst_bud medium_amethyst_bud large_amethyst_bud amethyst_cluster amethyst_block
 item.3920=blue_ice
-item.4037=soul_torch soul_campfire soul_lantern
+item.4037=soul_torch soul_campfire soul_lantern \
+quad-mstv-mtv:acacia_soul_torch quad-mstv-mtv:bamboo_soul_torch quad-mstv-mtv:birch_soul_torch quad-mstv-mtv:cherry_soul_torch quad-mstv-mtv:crimson_soul_torch quad-mstv-mtv:dark_oak_soul_torch quad-mstv-mtv:pale_oak_soul_torch quad-mstv-mtv:jungle_soul_torch quad-mstv-mtv:mangrove_soul_torch quad-mstv-mtv:spruce_soul_torch quad-mstv-mtv:warped_soul_torch
